--- a/kimSeonWoo-practice/Base.lproj/Main.storyboard
+++ b/kimSeonWoo-practice/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l5k-ls-rJP">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,22 +15,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그인을 해주세요." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZF3-EX-vPQ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="descriptionLabel" text="로그인을 해주세요." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZF3-EX-vPQ">
                                 <rect key="frame" x="30" y="223" width="333" height="21"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hx7-WV-rMV">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hx7-WV-rMV">
                                 <rect key="frame" x="162" y="465" width="69" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="로그인"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="로그인"/>
                                 <connections>
                                     <action selector="loginButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uhV-J5-SKG"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="soD-To-ZiS">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ㅁㅁㅁ" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="soD-To-ZiS">
                                 <rect key="frame" x="50" y="378" width="293" height="34"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -40,34 +41,53 @@
                                     <action selector="passwordChange:" destination="BYZ-38-t0r" eventType="editingChanged" id="nkG-py-GPX"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5lj-CQ-xgs">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ㅁㅁㅁ" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5lj-CQ-xgs">
                                 <rect key="frame" x="50" y="294" width="293" height="34"/>
-                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <action selector="idChange:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="Wbs-Xi-n7f"/>
                                 </connections>
                             </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ee7-56-vkJ">
+                                <rect key="frame" x="50" y="127" width="295" height="31"/>
+                                <connections>
+                                    <action selector="swtichToggled:" destination="BYZ-38-t0r" eventType="valueChanged" id="mf0-a5-vdW"/>
+                                </connections>
+                            </switch>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="mySlider" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="P83-1c-ajL">
+                                <rect key="frame" x="137" y="166" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="sliderSlide:" destination="BYZ-38-t0r" eventType="valueChanged" id="kWk-P8-jyE"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="soD-To-ZiS" firstAttribute="top" secondItem="5lj-CQ-xgs" secondAttribute="bottom" constant="50" id="6Ud-3d-FPR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5lj-CQ-xgs" secondAttribute="trailing" constant="50" id="7cP-76-PPy"/>
                             <constraint firstItem="ZF3-EX-vPQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="9t0-aj-TjD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="soD-To-ZiS" secondAttribute="trailing" constant="50" id="HNq-tn-jjc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ee7-56-vkJ" secondAttribute="trailing" constant="50" id="HR6-Bl-CTI"/>
+                            <constraint firstItem="ee7-56-vkJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="Muw-kq-Y82"/>
                             <constraint firstItem="5lj-CQ-xgs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="QN5-1E-5hI"/>
                             <constraint firstItem="soD-To-ZiS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="R9E-SB-HsB"/>
+                            <constraint firstItem="ee7-56-vkJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="RGb-dq-3S4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5lj-CQ-xgs" secondAttribute="trailing" constant="50" id="T9P-UK-Jjw"/>
                             <constraint firstItem="5lj-CQ-xgs" firstAttribute="top" secondItem="ZF3-EX-vPQ" secondAttribute="bottom" constant="50" id="cPy-6m-fY7"/>
+                            <constraint firstItem="ee7-56-vkJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="eMA-DH-Eew"/>
                             <constraint firstItem="ZF3-EX-vPQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="jHl-qe-7Vd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZF3-EX-vPQ" secondAttribute="trailing" constant="30" id="m54-LN-m5c"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ee7-56-vkJ" secondAttribute="trailing" constant="50" id="o8X-qO-f8n"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eeq-FQ-eGI"/>
                     <connections>
                         <outlet property="descriptionLabel" destination="ZF3-EX-vPQ" id="oKB-Sc-Riz"/>
+                        <outlet property="mySlider" destination="P83-1c-ajL" id="CCx-P3-CaM"/>
+                        <outlet property="mySwitch" destination="ee7-56-vkJ" id="8OQ-Mu-3IG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -85,6 +105,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHE-VX-kaO">
                                 <rect key="frame" x="155" y="356" width="83" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="뒤로가기"/>
                                 <connections>
@@ -93,24 +114,35 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AUR-na-28L">
                                 <rect key="frame" x="50" y="109" width="293" height="20.333333333333343"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z2j-X0-kGu">
                                 <rect key="frame" x="50" y="179.33333333333334" width="293" height="20.333333333333343"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="switch" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5rF-m4-J54">
+                                <rect key="frame" x="50" y="249.66666666666663" width="293" height="21"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6BC-jJ-Hh0"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="z2j-X0-kGu" firstAttribute="top" secondItem="AUR-na-28L" secondAttribute="bottom" constant="50" id="8Zp-Yj-eoU"/>
+                            <constraint firstItem="6BC-jJ-Hh0" firstAttribute="trailing" secondItem="5rF-m4-J54" secondAttribute="trailing" constant="50" id="BAt-h5-Rhh"/>
                             <constraint firstItem="6BC-jJ-Hh0" firstAttribute="trailing" secondItem="z2j-X0-kGu" secondAttribute="trailing" constant="50" id="IQj-4B-UzA"/>
+                            <constraint firstItem="5rF-m4-J54" firstAttribute="top" secondItem="z2j-X0-kGu" secondAttribute="bottom" constant="50" id="YP7-9F-rbq"/>
                             <constraint firstItem="z2j-X0-kGu" firstAttribute="leading" secondItem="6BC-jJ-Hh0" secondAttribute="leading" constant="50" id="ddy-Gc-ZUR"/>
                             <constraint firstItem="6BC-jJ-Hh0" firstAttribute="trailing" secondItem="AUR-na-28L" secondAttribute="trailing" constant="50" id="jB4-Eg-YJ5"/>
+                            <constraint firstItem="5rF-m4-J54" firstAttribute="leading" secondItem="6BC-jJ-Hh0" secondAttribute="leading" constant="50" id="pHT-RN-YVP"/>
                             <constraint firstItem="AUR-na-28L" firstAttribute="leading" secondItem="6BC-jJ-Hh0" secondAttribute="leading" constant="50" id="s20-2Y-1Gp"/>
                             <constraint firstItem="AUR-na-28L" firstAttribute="top" secondItem="6BC-jJ-Hh0" secondAttribute="top" constant="50" id="xQ6-4U-HTb"/>
                         </constraints>
@@ -119,6 +151,7 @@
                     <connections>
                         <outlet property="emailLabel" destination="AUR-na-28L" id="tM7-bZ-VLm"/>
                         <outlet property="passwordLabel" destination="z2j-X0-kGu" id="cUo-Tp-9Yf"/>
+                        <outlet property="switchLabel" destination="5rF-m4-J54" id="NOg-O6-wJq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KJT-CF-f8b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -144,12 +177,4 @@
             <point key="canvasLocation" x="122.90076335877862" y="-12.67605633802817"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
